# opti-perf

./: .gitignore  .makefile.swp  .project  CMakeLists.txt  compile.sh  compile_flags.txt  makefile  requirements.sh
checkpoints/: dcgan-sample-1.pt  dcgan-sample-10.pt  dcgan-sample-2.pt  dcgan-sample-3.pt  dcgan-sample-4.pt  dcgan-sample-5.pt  dcgan-sample-6.pt  dcgan-sample-7.pt  dcgan-sample-8.pt  dcgan-sample-9.pt  discriminator-checkpoint.pt  generator-checkpoint.pt
docs/: .TODOs.md.swp  README.md  TODOs.md  main.aux  main.tex  main.toc  outline.tex
docs/notes/: benchmark_definition.aux  benchmark_definition.tex
docs/presentation/: Untitled 2.odp  beamerthemeGA.sty  logo-1.eps  logo-2.eps  slides.aux  slides.nav  slides.out  slides.tex  slides.toc  slides.vrb  topic-presentation.odp
docs/references/: refs.aux
docs/sections/: conceptual-difference-opencl-and-cuda.tex  intro.aux  intro.tex  related-work.tex
include/benchmark/: benchmarkTrainer.h  benchmark_trainer.h  dcgan.h  mnist.h
include/benchmark/workloads/: workload.h
include/benchmark/workloads/generalmatrixmultiplication/: gemm.h
include/benchmark/workloads/machinelearning/: dcgan.h  mnist.h
include/optimization/: adam_optimizer.cl  adam_optimizer.h  adam_optimizer_cl.h  cl_adam_optimizer.h  integer_programming.h  optimizer.h  stochastic_gradient_descent.h
include/speedup/: .linear_operations.h.swp  linear_operations.h  operations.h
include/util/: device_param_view.h  device_platform_handler_cuda.h  device_platform_handler_opencl.h  device_platform_wrapper_opencl.h  device_tensor_adam.h  host_param_view.h  random_seed.h  setup_wrapper.h
kernels/: adam_optimizer.cl
notebooks/: Untitled.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
scripts/: display.py  load_download_mnist.py
src/: .makefile.swp  app.cpp
src/benchmark/: benchmarkTrainer.cpp  benchmarkWorkload.cpp  benchmark_adam_gemm.cpp  benchmark_trainer.cpp
src/benchmark/workloads/: .dcgan.cpp.swp  .minst.cpp.swp  dcgan.cpp  minst.cpp  mnist.cpp
src/benchmark/workloads/fastfouriertransform/: fft.cpp
src/benchmark/workloads/generalmatrixmultiplication/: gemm.cpp
src/benchmark/workloads/machinelearning/: dcgan.cpp  mnist.cpp
src/optimization/: adam_opitmizer.cl  adam_optimizer.cpp  adam_optimizer_cl.cpp  cl_adam_optimizer.cpp  gradient_descent.cpp
src/speedup/: .linear_operations.cpp.swp  TODO.md  linear_operations.cpp
src/util/: device_platform_handler_cuda.cpp  device_platform_handler_opencl.cpp  device_platform_wrapper_opencl.cpp  random_seeds.cpp
tests/: main_test.cpp
tests/speedup/: linear_operations_test.cpp
